adds README file and changes links to deplyed projects in html file

--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
     <div>
       <div class="projectsGrid">
         
-        <a href="https://github.com/Pav85/prework-study-guide"
+        <a href="https://pav85.github.io/prework-study-guide/"
            target="_blank"       
            id="prework" class="projectsGridArea">
             <div class="heading">Prework</div>
         </a>
       
-        <a href="https://github.com/Pav85/horiseon-code-refactor"
+        <a href="https://pav85.github.io/horiseon-code-refactor/"
            target="_blank"
            id="horiseon-code-refactor" class="projectsGridArea">
             <div class="heading">Horiseon Code Refactor</div>
         </a>
 
-        <a href="https://github.com/Pav85/my-bio-page"
+        <a href="https://pav85.github.io/my-bio-page/"
            target="_blank"
            id="my-bio-page" class="projectsGridArea">
             <div class="heading">My bio page</div>
